# value-action-mechanistic

./: .env.example  .gitignore  gemma_scope2_experiment.py  jacobian_lens_experiment.py  main.py  psycho_llm_behavioral_experiment.py  pyproject.toml  value_action_gap_benchmark.py
jlens_experiments/: __init__.py  common.py  decompose_jspace.py  probe_tokens.py  top_tokens.py
local_inference/: __init__.py  auth.py  backend.py  config.py  hf_backend.py  prompt_encoding.py  vllm_backend.py
psycho_llm_behavioral/: README.md  STEERING.md  __init__.py  __main__.py  backends.py  hf_jlens_backend.py  inspect_jspace.py  judge_client.py  judge_prompt.py  prompts.py  run.py  runner.py  steering.py  storage.py  vllm_jlens_backend.py  vllm_jlens_runtime.py
psycho_llm_behavioral/concept_configs/: default.json
tests/: test_psycho_llm_behavioral.py  test_psycho_llm_jspace.py  test_psycho_llm_steering.py
value_action_gap_bench/: __init__.py  backend.py  constants.py  data.py  metrics.py  model.py  parsing.py  prompt_encoding.py  prompts_task1.py  prompts_task2.py  run.py  runner.py  vllm_backend.py
